hw12_13_14_15_calendar/kube/calendar-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calendar
  labels:
    name: calendar
    app: calendar
