hw12_13_14_15_calendar/kube/calendar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calendar-deployment
  namespace: calendar
  labels:
    app: calendar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calendar
  template:
    metadata:
      labels:
        app: calendar
    spec:
      containers:
        - name: calendar
          image: calendar:0.0.1
          ports:
            - name: http
              containerPort: 8585
              protocol: TCP
            - name: grpc
              containerPort: 6565
              protocol: TCP
