hw12_13_14_15_calendar/kube/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: calendar
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      dnsConfig:
        searches:
          - calendar.svc.cluster.local
      containers:
        - name: postgres
          image: postgres:11.6
          ports:
            - name: postgres
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgre-initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgre-initdb
          configMap:
            name: postgre-initdb-config
