hw12_13_14_15_calendar/kube/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-deployment
  labels:
    app: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
        - name: scheduler
          image: scheduler:0.0.1
