hw12_13_14_15_calendar/kube/sender-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sender-deployment
  labels:
    app: sender
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sender
  template:
    metadata:
      labels:
        app: sender
    spec:
      containers:
        - name: sender
          image: sender:0.0.1
