hw12_13_14_15_calendar/kube/calendar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calendar-service
  labels:
    app: calendar
spec:
  type: NodePort
  ports:
    - port: 8585
      targetPort: http
      protocol: TCP
      name: http
      nodePort: 30585
    - port: 6565
      targetPort: grpc
      protocol: TCP
      name: grpc
      nodePort: 30565
  selector:
    app: calendar
