hw12_13_14_15_calendar/kube/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: postgres
      protocol: TCP
      nodePort: 30432
  selector:
    app: postgres
