hw12_13_14_15_calendar/kube/calendar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calendar-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: calendar-app.local
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calendar-service
                port:
                  number: 8585
